# proobuchdev

./: .gitignore  .replit  LICENSE  README.md  check_columns.py  cookies.txt  create_achievements.py  create_notification_sounds.py  db.sqlite3  fix_migration.py  input.css  package-lock.json  package.json  pyproject.toml  regenerate_achievements.py  setup_git.sh  tailwind.config.js  test_cli.py  test_comprehensive.py  test_lesson_notifications.py  test_ui_responsive.py  testing_report.md  url_routes_check.py
ai_assistant/: admin.py  ai_service.py  apps.py  forms.py  models.py  urls.py  views.py
assignments/: __init__.py  admin.py  apps.py  code_checker.py  forms.py  models.py  tests.py  urls.py  views.py
attached_assets/: Pasted---1744303604879.txt  Pasted--admins-teachers--1744257881537.txt
courses/: __init__.py  admin.py  certificate_views.py  certificates.py  forms.py  models.py  models_certificates.py  tests.py  urls.py  urls_certificates.py  views.py
dashboard/: admin.py  api.py  api_events.py  api_goals.py  apps.py  forms.py  models.py  models_events.py  models_goals.py  signals.py  urls.py  views.py
educational_platform/: __init__.py  admin_views.py  asgi.py  csrf_hack.py  settings.py  urls.py  wsgi.py
gamification/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
lessons/: __init__.py  admin.py  forms.py  models.py  tests.py  urls.py  views.py
notifications/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
olympiads/: __init__.py  admin.py  apps.py  code_checker.py  code_runner.py  format_code_view.py  (+4 more)
(+173 files in other folders)
